--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   http: ^1.2.1
   flutter_staggered_animations: ^1.1.1
   flutter_launcher_icons: ^0.13.1
+  google_fonts: ^6.2.1
 
 flutter_launcher_icons:
   android: "launcher_icon"
